apps/llama-cpp-rpc/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: llama-cpp-rpc
  namespace: shikanime
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  serviceName: llama-cpp-rpc
  replicas: 2
  volumeClaimTemplates:
    - metadata:
        name: cache
      spec:
        resources:
          requests:
            storage: 256Gi
        storageClassName: nishir-ephemeral
        accessModes:
          - ReadWriteOncePod
    - metadata:
        name: cache-mesa
      spec:
        resources:
          requests:
            storage: 512Mi
        storageClassName: nishir-ephemeral
        accessModes:
          - ReadWriteOncePod
    - metadata:
        name: cache-radv
      spec:
        resources:
          requests:
            storage: 512Mi
        storageClassName: nishir-ephemeral
        accessModes:
          - ReadWriteOncePod
  selector:
    matchLabels:
      app.kubernetes.io/instance: llama-cpp
      app.kubernetes.io/name: llama-cpp-rpc
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: llama-cpp
        app.kubernetes.io/name: llama-cpp-rpc
    spec:
      securityContext:
        fsGroup: 65532
      nodeSelector:
        feature.node.kubernetes.io/pci-0380_1002.present: "true"
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 50
              preference:
                matchExpressions:
                  - key: feature.node.kubernetes.io/network.speed.10g
                    operator: In
                    values:
                      - "true"
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app.kubernetes.io/instance: llama-cpp
                  app.kubernetes.io/name: llama-cpp-rpc
              topologyKey: kubernetes.io/hostname
      containers:
        - name: llama-cpp-rpc
          image: llama-cpp-rpc
          command:
            - ggml-rpc-server
          securityContext:
            privileged: true
            allowPrivilegeEscalation: true
          args:
            - --host
            - 0.0.0.0
            - --port
            - "50052"
            - --cache
          ports:
            - name: rpc
              containerPort: 50052
          volumeMounts:
            - name: cache
              mountPath: /cache
            - name: cache-mesa
              mountPath: /home/llama.cpp/.cache/mesa_shader_cache
            - name: cache-radv
              mountPath: /home/llama.cpp/.cache/radv_builtin_shaders
            - name: dev-kfd
              mountPath: /dev/kfd
            - name: dev-dri
              mountPath: /dev/dri
      volumes:
        - name: dev-kfd
          hostPath:
            type: CharDevice
            path: /dev/kfd
        - name: dev-dri
          hostPath:
            type: Directory
            path: /dev/dri
