apps/llama-cpp-rpc/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: llama-cpp-rpc
  namespace: shikanime
spec:
  internalTrafficPolicy: Local
  selector:
    app.kubernetes.io/instance: llama-cpp
    app.kubernetes.io/name: llama-cpp-rpc
  ports:
    - name: rpc
      appProtocol: shikanime.studio/ggml-rpc
      port: 50052
      targetPort: rpc
